[gd_scene load_steps=4 format=3 uid="uid://bvlnlwikdpmc5"]

[ext_resource type="Script" uid="uid://d2qj0m0c3km5" path="res://Scripts/evidence.gd" id="1_ftgfy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7b7di"]
size = Vector2(50, 50)

[sub_resource type="CanvasTexture" id="CanvasTexture_ftgfy"]

[node name="collectible_evidence" type="Area2D" groups=["evidence"]]
script = ExtResource("1_ftgfy")

[node name="evidence_collider" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_7b7di")

[node name="evidence_sprite" type="Sprite2D" parent="evidence_collider"]
position = Vector2(-1.9073486e-06, 0)
scale = Vector2(50.000004, 50)
texture = SubResource("CanvasTexture_ftgfy")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
